--- a/templates/dashboards/docente_dashboard.html
+++ b/templates/dashboards/docente_dashboard.html
@@ -9,11 +9,20 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <div class="card mb-4">
-                <div class="card-header bg-success text-white">Materias</div>
+                <div class="card-header bg-success text-white">
+                    <h5 class="mb-0"><i class="fas fa-chalkboard-teacher"></i> Mis Materias y Notas</h5>
+                </div>
                 <div class="card-body">
-                    <a href="{{ url_for('notas.ingresar_notas_ejemplo') }}" class="btn btn-outline-success w-100">Ingresar Notas de Ejemplo</a>
+                    <div class="d-grid gap-3">
+                        <a href="{{ url_for('docente_notas.mis_materias') }}" class="btn btn-success btn-lg">
+                            <i class="fas fa-book-reader"></i> Ver Mis Materias Asignadas
+                        </a>
+                        <a href="{{ url_for('notas.ingresar_notas_ejemplo') }}" class="btn btn-outline-success">
+                            <i class="fas fa-clipboard-list"></i> Ver Formato de Notas (Ejemplo)
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
