--- a/templates/dashboards/docente_dashboard.html
+++ b/templates/dashboards/docente_dashboard.html
@@ -19,6 +19,9 @@
                         <a href="{{ url_for('docente_notas.mis_materias') }}" class="btn btn-success btn-lg">
                             <i class="fas fa-book-reader"></i> Ver Mis Materias Asignadas
                         </a>
+                        <a href="{{ url_for('reportes.reporte_conducta_estudiante') }}" class="btn btn-primary btn-lg">
+                            <i class="fas fa-user-check"></i> Reporte de Conducta (Estudiante)
+                        </a>
                         <a href="{{ url_for('notas.ingresar_notas_ejemplo') }}" class="btn btn-outline-success">
                             <i class="fas fa-clipboard-list"></i> Ver Formato de Notas (Ejemplo)
                         </a>
