--- a/templates/dashboards/docente_dashboard.html
+++ b/templates/dashboards/docente_dashboard.html
@@ -22,6 +22,9 @@
                         <a href="{{ url_for('reportes.reporte_conducta_estudiante') }}" class="btn btn-primary btn-lg">
                             <i class="fas fa-user-check"></i> Reporte de Conducta (Estudiante)
                         </a>
+                        <a href="{{ url_for('reportes.reporte_notas_docente') }}" class="btn btn-info btn-lg">
+                            <i class="fas fa-file-alt"></i> Reporte de Notas (Docente)
+                        </a>
                         <a href="{{ url_for('notas.ingresar_notas_ejemplo') }}" class="btn btn-outline-success">
                             <i class="fas fa-clipboard-list"></i> Ver Formato de Notas (Ejemplo)
                         </a>
