--- a/templates/base.html
+++ b/templates/base.html
@@ -107,13 +107,8 @@
             <h6 class="nav-section-title">Docente</h6>
             <ul class="navbar-nav flex-column w-100">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('docente_notas.mis_materias') }}">
-                  <i class="bi bi-book"></i><span>Mis Materias</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('estudiantes.lista_estudiantes') }}">
-                  <i class="bi bi-people"></i><span>Mis Estudiantes</span>
+                <a class="nav-link" href="{{ url_for('coordinador.dashboard') }}">
+                  <i class="bi bi-house-door"></i><span>Dashboard</span>
                 </a>
               </li>
             </ul>
