Modificando vistas de secciones y validaciones

--- a/templates/materias/listar.html
+++ b/templates/materias/listar.html
@@ -447,7 +447,7 @@
 </div>
 
 <div class="container">
-    <!-- Mensaje de éxito -->
+    <!-- Mensaje de éxito
     {% if success %}
     <div class="alert-success show">
         {% if action=='created' %}Materia creada con éxito
@@ -459,7 +459,7 @@
         {% endif %}
         <button class="close-btn" onclick="this.parentElement.classList.remove('show')">&times;</button>
     </div>
-    {% endif %}
+    {% endif %} -->
 
 
     <div class="action-bar">
