--- a/templates/secciones/listar.html
+++ b/templates/secciones/listar.html
@@ -565,7 +565,7 @@
                         <td>
                             <span class="year-badge">
                                 <i class="fas fa-calendar-alt"></i>
-                                {{ seccion.id_ano_lectivo }}
+                                {{ seccion.ano_lectivo.ano }}
                             </span>
                         </td>
                         <td>
