--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -37,9 +37,9 @@
           {% endif %}
         {% endwith %}
 
-        <div class="mt-3 text-center">
-            <a href="{{ url_for('recover.recuperar') }}">¿Olvidaste tu contraseña?</a>
-        </div>
+    <div class="mt-3 text-center">
+      <a href="{{ url_for('recover.request_code') }}">¿Olvidaste tu contraseña?</a>
+    </div>
     </div>
 </div>
 
